frontend/src/layouts/Sidebar/Sidebar.css
html, body {
    height: 100%;
}

aside {
    width: 256px;
    min-height: 100vh;
    background-color: var(--primary-layout-background-color);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    position: fixed;
}

.sidebar-main {
    flex: 1;
    width: 100%;
    display: flex;
    flex-direction: column;
    margin-top: 0;
}
.nav-sidebar {
    display: flex;
    flex-direction: column;
    gap: 5px;
    padding-top: 8px;
    align-items: center;
}

@media (max-width: 768px) {
  aside {
    position: fixed;
    left: 0;
    top: 0;
    height: 100%;
    transform: translateX(-100%);
    z-index: 1000;
    flex-direction: column;
    justify-content: flex-start;
  }

  aside.open {
    transform: translateX(0);
  }

  .sidebar-header {
    justify-content: center;
  }

  .close-sidebar {
    display: block;
  }

  .sidebar-main {
    flex: 1;
  }

  .account-block {
    margin-top: auto;
  }
}


.logo-sidebar {
    border-bottom: 1px solid #424242;
    display: flex;
    align-items: center;
    justify-content: center;
    color: #FFFFFF;
    width: 100%;
    height: 64px;
}

.nav-sidebar {
    display: flex;
    flex-direction: column;
    gap: 5px;
    margin-top: 24px;
}

.nav-sidebar > a{
    display: flex;
    align-items: center;
    text-decoration: none;
    color: #D1D5D8;
    font-family: var(--font-heading);
    font-size: 1rem;
    gap: 10px;
    width: 224px;
    height: 48px;
    border-radius: 5px;
    padding: 12px 16px;
    transition: all ease 250ms;
}

.nav-sidebar a.active {
  background-color: var(--primary-color);
  color: #FFFFFF;
}

.nav-sidebar a:hover {
    color: #FFFFFF;
}

.account-block {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    padding: 16px 12px;
    border-top: 1px solid #424242;
}

.account-view {
    display: flex;
    width: 100%;
    align-items: center;
    color: #FFFFFF;
    margin-bottom: 20px;
    font-family: var(--font-base);
    gap: 10px;
}

.circle-img {
    width: 30px;
    height: 30px;
    border-radius: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: var(--primary-color);
}

.user-name-sidebar {
    font-size: 0.9rem;
    font-weight: 600;
}

.email-sidebar {
    color: #a4a4a4;
    font-size: 0.8rem;
}

.logout-button {
    width: 100%;
    height: 36px;
    background-color: #FFFFFF;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 10px;
    cursor: pointer;
    border-radius: 5px;
    border-style: none;
}

.logout-button:hover {
    background-color: var(--quaternary-color);
    color: #FFFFFF;
}

.sidebar-header {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  position: relative;
}

.close-sidebar {
  display: none;
  position: absolute;
  right: 18px;
  top: 50%;
  transform: translateY(-50%);
  background: none;
  border: none;
  cursor: pointer;
  padding: 4px;
}

@media (max-width: 768px) {
  .close-sidebar {
    display: block;
  }

  .logo-sidebar {
    justify-content: left;
    align-items: center;
    text-align: start;
    padding-left: 24px;
  }
}

@media (max-width: 1024px) {

    .nav-sidebar > a {
        font-size: 0.889rem;
    }

    .user-name-sidebar {
        font-size: 0.8rem;
        font-weight: 600;
    }

    .email-sidebar {
        color: #a4a4a4;
        font-size: 0.7rem;
    }
}

@media (max-width: 768px) {
  aside {
    position: fixed;
    left: 0;
    height: calc(100% - 64px);
    transform: translateX(-100%);
    z-index: 1000;
  }

  aside.open {
    transform: translateX(0);
  }
}

